--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,16 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <div class="input-group">
+    <%= f.label :first_name, "First Name" %>
+    <%= f.text_field :first_name, autofocus: true %>
+  </div>
+
+  <div class="input-group last-name">
+    <%= f.label :last_name, "Last Name" %>
+    <%= f.text_field :last_name, autofocus: true, class: 'input-group-field' %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
