--- a/app/views/devise/menu/_signin_items.html.erb
+++ b/app/views/devise/menu/_signin_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
   <li class="title-li">
-  <%= link_to('Sign-out', destroy_user_session_path, :method => :delete) %>
+  <%= link_to('Sign out', destroy_user_session_path, :method => :delete) %>
   </li>
 <% else %>
   <li class="title-li">
-  <%= link_to('Sign-in', new_user_session_path)  %>
+  <%= link_to('Sign in', new_user_session_path)  %>
   </li>
 <% end %>
