--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -7,3 +7,8 @@
     <input id="site" type="button" value="Submit">
   </div>
 </form>
+
+<script async defer
+      src=
+      <%= "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_MAPS_KEY']}&v=3&callback=initMap" %>>
+</script>
