added map to home component and added geo position to site model

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,17 @@ ul.hmenu li {
 input {
   // width: 100%;
 }
+
+#app {
+  height: 100%;
+}
+
+#app div {
+  height: 100%;
+}
+
+#map {
+  width: 80%;
+  height: 80%;
+  margin: auto;
+}
