added map to homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,11 @@ input {
 }
 
 #map {
-  width: 80%;
-  height: 80%;
-  margin: auto;
+  width: 70%;
+  height: 50%;
+  margin: 50px auto;
+}
+
+#map div {
+  height: auto;
 }
