--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,12 @@ ul.hmenu li {
 }
 
 input {
-  // width: 100%;
+  width: 100%;
+}
+
+textarea.input-group-field{
+  width: 100%;
+  height: 100%;
 }
 
 #app {
@@ -23,10 +28,14 @@ input {
 
 #map {
   width: 70%;
-  height: 50%;
+  height: 40%;
   margin: 50px auto;
 }
 
 #map div {
   height: auto;
+}
+
+.input-group{
+  display: block;
 }
