--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ textarea.input-group-field{
   height: 100%;
 }
 
+
 #app {
   height: 100%;
 }
@@ -38,4 +39,9 @@ textarea.input-group-field{
 
 .input-group{
   display: block;
+}
+
+.form {
+  margin: auto;
+  float: none;
 }
