added volunteer form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,10 @@ textarea.input-group-field{
   display: block;
 }
 
+#volunteer-form .input-group {
+  display: inline-block;
+}
+
 .form {
   margin: auto;
   float: none;
