--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ input {
 
 textarea.input-group-field{
   width: 100%;
-  height: 100%;
+  max-height: 10%;
 }
 
 img {
@@ -51,7 +51,6 @@ img {
 
 .form {
   margin: auto;
-  float: none;
 }
 
 .hidden {
