--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,13 @@
 // @import "*";
 ul.hmenu {
   list-style: none;
-  margin: 0 0 2em;
   padding: 0;
+  margin: 10px 1.25em;
 }
 
 ul.hmenu li {
   display: inline;
+  margin: 10px;
 }
 
 input {
@@ -22,23 +23,38 @@ img {
   display: block;
 }
 
+.nav-links {
+  display: inline;
+  list-style: none;
+  margin-bottom: 20px;
+}
+
+.nav-links li {
+  display: inline;
+  margin: 10px;
+}
 
 #app {
   height: 100%;
 }
 
-#app div {
+#app>div {
+  height: 100%;
+}
+
+#app>div>div{
   height: 100%;
 }
 
 #map {
-  width: 70%;
-  height: 40%;
+  width: 80%;
+  height: 60%;
   margin: 50px auto;
 }
 
 .button {
   display: block;
+  margin: 10px auto;
 }
 #map div {
   height: auto;
