--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,1 +1,5 @@
 <div id='app'></div>
+<script async defer
+      src=
+      <%= "https://maps.googleapis.com/maps/api/js?libraries=places&key=#{ENV['GOOGLE_MAPS_KEY']}&v=3&callback=initMap" %>>
+</script>
