added catchall route for react router

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body>
     <ul class="hmenu">
-      <li><%= link_to 'Volunteer Meetup', sites_path %></li>
+      <li><%= link_to 'Volunteer Meetup', root_path %></li>
       <%= render 'devise/menu/registration_items' %>
       <%= render 'devise/menu/signin_items' %>
     </ul>
