--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,11 @@ span.edit h5 {
   display: inline;
 }
 
+.post-body {
+  margin: 20px;
+  font-style: italic;
+}
+
 .create {
   background-color: #2eb82e;
 }
