--- a/app/assets/stylesheets/palette.scss
+++ b/app/assets/stylesheets/palette.scss
@@ -1,8 +1,11 @@
 /* Coolors Exported Palette - coolors.co/11151c-212d40-364156-7d4e57-d66853 */
 
 /* HSL */
-$black: #11151c;
-$gray: #dddfe2;
-$charcoal: #364156;
-$tuscan: #7d4e57;
+$cyan: #1B8C8E;
+$cyan-hover: #146668;
+$gray: #DEDACF;
+$green: #222A2E;
+$off-white: #F7F4ED;
 $jelly-bean: #d66853;
+$jelly-bean-hover: #894335;
+$white: #efefef;
