--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link href="https://fonts.googleapis.com/css?family=Gudea|Hind+Madurai" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.1.2/foundation.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <%= csrf_meta_tags %>
@@ -16,7 +16,7 @@
   <body>
     <div class='rails-nav-bar'>
       <ul class="hmenu">
-        <li><%= link_to (image_tag 'handvolunteermeetup1.png', class: 'logo'), root_path %></li>
+        <div class='small-12 medium-1 columns'><%= link_to (image_tag 'VMappLogoWhite.png', class: 'logo'), root_path %></div>
         <%= render 'devise/menu/registration_items' %>
         <%= render 'devise/menu/signin_items' %>
       </ul>
