--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,10 @@
     <div class='rails-nav-bar'>
       <ul class="hmenu">
         <div class='small-12 medium-1 columns'><%= link_to (image_tag 'VMappLogoWhite.png', class: 'logo'), root_path %></div>
-        <%= render 'devise/menu/registration_items' %>
-        <%= render 'devise/menu/signin_items' %>
+        <div class='small-12 medium-6 columns'>
+          <%= render 'devise/menu/registration_items' %>
+          <%= render 'devise/menu/signin_items' %>
+        </div>
       </ul>
     </div>
     <%= yield %>
