--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
     <div class='small-6 medium-6 columns'>
-      <%= link_to('Edit Profile', edit_user_registration_path) %>
+      <%= link_to('PROFILE', edit_user_registration_path) %>
     </div>
 <% else %>
   <div class='small-6 medium-6 columns'>
-      <%= link_to('Sign up', new_user_registration_path)  %>
+      <%= link_to('SIGN UP', new_user_registration_path)  %>
   </div>
 <% end %>
