--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -349,13 +349,24 @@ input.button{
   text-align: center;
 }
 
-
 ::-webkit-scrollbar {
-  background-color: $off-white;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-corner {
-  background-color: $off-white
+  background-color: $off-white;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: $off-white;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    background-color: $cyan;
 }
 
 .react-nav-bar {
