--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,5 @@
+<div class='devise-container'>
+<div class='small-12 medium-6 large-3 columns end devise-form'>
 <h2>Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -23,3 +25,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
