--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class='devise-container'>
+<div class='small-12 medium-6 large-3 columns end devise-form'>
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -42,3 +44,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
