--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@ body {
   color: $green;
 }
 
+.toast-info {
+  background-color: $jelly-bean;
+}
+
 .form-section {
   background-color: $gray;
   margin: inherit;
