--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@ html, body {
 }
 
 body {
+  font-size: 
   margin: 0px;
   padding: 0px;
   background-color: $off-white;
@@ -20,6 +21,10 @@ body {
 .form-section {
   background-color: $gray;
   margin: inherit;
+}
+
+div.form-section div.input-group {
+  margin-top: 0;
 }
 
 div.devise-container > div.end.columns.small-12.medium-6.devise-form {
@@ -135,7 +140,7 @@ input[type='checkbox'] {
   height: 13px;
   padding: 0;
   margin:0;
-  vertical-align: bottom;
+  vertical-align: middle;
   position: relative;
   top: -1px;
   *overflow: hidden;
@@ -287,7 +292,7 @@ div.map-page{
 #map {
   width: 80%;
   height: 60%;
-  margin: 50px auto 200px auto;
+  margin: 50px auto 150px auto;
 }
 
 #map div {
