--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,12 +6,12 @@
   <%= devise_error_messages! %>
 
   <div class="input-group">
-    <%= f.label :first_name, "First Name" %><br />
+    <%= f.label :first_name, "First Name" %>
     <%= f.text_field :first_name, autofocus: true %>
   </div>
 
   <div class="input-group last-name">
-    <%= f.label :last_name, "Last Name" %><br/>
+    <%= f.label :last_name, "Last Name" %>
     <%= f.text_field :last_name, autofocus: true, class: 'input-group-field' %>
   </div>
 
@@ -21,20 +21,20 @@
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em style='font-size: .8rem'>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -42,6 +42,8 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+</br>
+<p>Already have an account?</p>
 
 <%= render "devise/shared/links" %>
 </div>
